src/components/browser/Filter/style.css
.filter-container {
    display: flex;
    gap: 1rem;
}

.filter-container input, .filter-container button {
    height: 2.6rem;
    /*border-radius: 1.3rem;*/
    background: #FFFFFF;
    box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);

    overflow: hidden;
    transition: width ease .15s;
}
.filter-container input:hover,
.filter-container button:hover {background: #fafafe;}
.filter-container input:active,
.filter-container button:active {background: #f3f3f4;}
.filter-container input:focus {background: #fafafe;}

.filter-container button {
    border-radius: 0;
    box-shadow: none;
    /*display: flex;*/
    /*align-items: center;*/
}

.filter-container .filter-menu {
    border-radius: 1.3rem;
    overflow: hidden;
}

.filter-container input {
    width: auto;
    flex-grow: 1;
    max-width: 22rem;
}

.filter-container svg {
    height: 1.5rem;
    width: 2.5rem;
    vertical-align: middle;
}

